Revert "添加了Redis和OSS的降级处理"
This reverts commit f1a59eb830208d00ae5821b021bcc16753cb0ee0.